# AutoRiaClone

./: .env  Dockerfile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: brands_models.py  celerybeat-schedule  locations.py
backend/apps/auth/: serializers.py  urls.py  views.py
backend/apps/car/: api_views.py  consumer.py  filter.py  managers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/apps/car_shops/: apps.py  serializers.py  urls.py  views.py
backend/apps/chat/: consumers.py  models.py  routing.py
backend/apps/pizza/: apps.py  consumer.py  managers.py  models.py  routing.py  serializers.py  views.py
backend/apps/pizza_shops/: models.py
backend/apps/user/: apps.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/configs/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/configs/extra_conf/: __init__.py  celery_conf.py  jwt_conf.py  rest_conf.py
backend/core/: pagination.py
backend/core/enums/: action_token_enum.py  regex_enum.py
backend/core/handlers/: error_handler.py
backend/core/middlewares/: socket_middleware.py
backend/core/services/: email_service.py  file_service.py  (+2 more)
backend/templates/: recovery.html  register.html  spam.html
client/: asset-manifest.json  index.html
frontend/: jsconfig.json  package-lock.json  package.json
frontend/src/: App.jsx  index.css  index.js  router.js
next-client/: Dockerfile  next.config.ts  package-lock.json  package.json
postman/: api_collection.json
(+197 files in other folders)
